# Patcherex2

./: .gitignore  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/actions/install-patcherex2/: action.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  pypi.yaml  pypi.yml  test.yaml  test.yml
docs/: .pages  api_reference.md  core_ideas.md  examples.md  index.md  patch_types.md  reference.md
docs/advanced_usages/: add_new_target_support.md  advanced_usage.md
docs/api_reference/: patches.md
docs/api_references/: patcherex.md
docs/core_ideas/: patches.md
docs/css/: extra.css
docs/examples/: insert_instruction_patch.md  modify_function_patch.md  multiple_patches.md
examples/insert_instruction_patch/: add  patch.py
examples/insert_instruction_patch_c/: add.patched  patch.py
examples/modify_function_patch/: add.c  patch.py
examples/multiple_patches/: getline  getline.c  patch.py
patcherex2/: patcherex.py
patcherex2/allocation_management/: __init__.py
patcherex2/binfmt_tools/: ihex.py
patcherex2/patches/: data_patches.py  function_patches.py  instruction_patches.py
patcherex2/targets/: elf_aarch64_linux.py  ihex_ppc_bare.py  target.py
src/patcherex2/: __init__.py  patcherex.py
src/patcherex2/binfmt_tools/: elf.py
src/patcherex2/patches/: __init__.py  data_patches.py  dummy_patches.py  function_patches.py  instruction_patches.py  patch.py  raw_patches.py
src/patcherex2/targets/: __init__.py  bin_arm_bare.py  elf_aarch64_linux.py  target.py  (+21 more)
tests/: aarch64.py  arm.py  test_aarch64.py  test_aarch64_ghidra.py  test_arm.py  test_arm_ghidra.py  test_i386.py  test_i386_ghidra.py  test_mips.py  test_mips64.py  test_mips64_ghidra.py  test_mips64el.py  test_mips64el_ghidra.py  test_mips_ghidra.py  test_mipsel.py  test_mipsel_ghidra.py  test_ppc.py  test_ppc64.py  test_ppc64_ghidra.py  test_ppc64le.py  test_ppc64le_ghidra.py  test_ppc_ghidra.py  test_s390x.py  test_x86_64.py  test_x86_64_ghidra.py
(+92 files in other folders)
