[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "patcherex2"
version = "0.0.0"
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "angr",
    "pyelftools",
    "pypcode",
    "lark",
    "lief",
    "keystone-engine",
    "intelhex",
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/purseclab/Patcherex2"
"Source" = "https://github.com/purseclab/Patcherex2"
"Tracker" = "https://github.com/purseclab/Patcherex2/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = ["examples"]

[tool.ruff.lint]
extend-select = ["I", "N", "UP", "B"]
