[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "patcherex2"
dynamic = ["version"]
requires-python = ">=3.8"
readme = "README.md"
dependencies = [
    "angr",
    "pyelftools",
    "pypcode",
    "lief",
    "keystone-engine",
    "intelhex",
    "requests"
]

[project.optional-dependencies]
ghidra = ["pyhidra"]
all = ["patcherex2[ghidra]"]

[project.urls]
"Homepage" = "https://github.com/purseclab/Patcherex2"
"Source" = "https://github.com/purseclab/Patcherex2"
"Tracker" = "https://github.com/purseclab/Patcherex2/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = ["examples"]

[tool.ruff.lint]
extend-select = ["I", "N", "UP", "B"]

[tool.setuptools_scm]
# empty
